-Made the favicon  avisible colour -fixed all bugs with header behaviour, including the infinite header toggle when webpage height just under page height -simplified web responsiveness for header size response and implemented an overriding javascript method for smoother sizes between all major screen sizes. -removed redundant basic layout class

--- a/Website/common/css/basic_style.css
+++ b/Website/common/css/basic_style.css
@@ -4,9 +4,3 @@ html, body {
 	height: 100%;
 	width: 100%;
 }
-
-.enlarged_font {
-	font-size: 1.5em;
-	text-align: justify;
-	margin: 1em;
-}
