--- a/Website/common/css/responsive_layout.css
+++ b/Website/common/css/responsive_layout.css
@@ -30,38 +30,32 @@
 	}
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
 	#header_container {
 		font-size: 90%;
 	}
 }
 
-@media only screen and (max-width: 900px) {
-	#header_container {
-		font-size: 80%;
-	}
-}
-
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 700px) {
 	#header_container {
 		font-size: 70%;
 	}
 }
 
-@media only screen and (max-width: 700px) {
-	#header_container {
-		font-size: 60%;
-	}
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
 	#header_container {
 		font-size: 50%;
 	}
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 480px) {
 	#header_container {
-		font-size: 40%;
+		font-size: 48%;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	#header_container {
+		font-size: 32%;
 	}
 }
